--- a/.curlrc
+++ b/.curlrc
@@ -6,3 +6,9 @@ referer = ";auto"
 
 # Wait 60 seconds before timing out.
 connect-timeout = 60
+progress-bar
+max-time = 90
+verbose
+show-error
+remote-time
+ipv4
