--- a/.inputrc
+++ b/.inputrc
@@ -1,3 +1,5 @@
+# set editing-mode vi
+# set keymap vi-command
 # Make Tab autocomplete regardless of filename case
 set completion-ignore-case on
 
